--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -6,7 +6,7 @@
     rendering that might remove it during build, otherwise Netlify won't
     recognize it.
   -->
-  <form name="contact" method="POST" action="/thanks" data-netlify="true" netlify-honeypot="bot-field" class="mt-4 grid gap-4">
+  <form name="track-attack-running-contact-us" method="POST" action="/thanks" data-netlify="true" netlify-honeypot="bot-field" class="mt-4 grid gap-4">
     <input type="hidden" name="form-name" value="contact">
     <p class="hidden">
       <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
