--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@
     <img src="/logo-tar.svg" alt="Track Attack Running logo" class="max-w-xs w-full h-auto">
   </div>
   <div>
-    <p class="mt-4 text-lg">Achieve personal bests from 5k to marathon.</p>
+    <p class="mt-4 text-lg">Run Smarter, Run Stronger, Run Faster. Achieve personal bests with our running interval workouts.</p>
     <a href="#contact" class="mt-6 inline-block px-5 py-3 bg-primary text-white rounded">Get in touch</a>
   </div>
 </section>
