--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,14 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import About from "../components/About.astro";
+import Founders from "../components/Founders.astro";
 import Book from "../components/Book.astro";
 import Contact from "../components/Contact.astro";
 ---
 <Layout>
   <Hero />
   <About />
+  <Founders />
   <Book />
   <Contact />
 </Layout>
