--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "../components/Hero.astro";
 import About from "../components/About.astro";
 import Founders from "../components/Founders.astro";
 import Book from "../components/Book.astro";
+import Gallery from "../components/Gallery.astro";
 import Contact from "../components/Contact.astro";
 ---
 <Layout>
@@ -11,5 +12,6 @@ import Contact from "../components/Contact.astro";
   <About />
   <Founders />
   <Book />
+  <Gallery />
   <Contact />
 </Layout>
