--- a/src/components/Founders.astro
+++ b/src/components/Founders.astro
@@ -1,13 +1,24 @@
 <section id="founders" class="max-w-4xl mx-auto p-6">
   <h2 class="text-2xl font-bold">Founders</h2>
-  <div class="flex flex-col md:flex-row gap-6 mt-4">
-    <div class="flex-shrink-0">
-      <img src="/tar-founders.png" alt="Tony Pelosi and Chi-An Emhoff, founders of Track Attack Running" class="w-48 h-auto rounded-lg">
-    </div>
-    <div class="flex-1">
+  
+  <!-- Mobile layout: image full width above text -->
+  <div class="md:hidden">
+    <img src="/tar-founders.png" alt="Tony Pelosi and Chi-An Emhoff, founders of Track Attack Running" class="w-full h-auto rounded-lg mb-4">
+    <p class="mb-4">Track Attack Running originated at American River College in Sacramento in 2004. It was founded by Tony Pelosi and Chi-An (Wang) Emhoff as part of Total Body Fitness before launching their own business in 2007. As collegiate track captains who went on to become competitive amateur triathletes, they adapted lessons from masters swimming to turn monotonous track workouts into fun and engaging group experiences that could be enjoyed by athletes of all levels.</p>
+    
+    <p>As an engineer and product manager, Tony has also launched fitness applications and devices at Garmin and Magellan, while Chi-An, who has a Ph.D. in Exercise Physiology from UC Berkeley, is a Professor of Kinesiology at Saint Mary's College of California.</p>
+  </div>
+  
+  <!-- Desktop layout: image left, text wrapping around -->
+  <div class="hidden md:block">
+    <div class="relative">
+      <img src="/tar-founders.png" alt="Tony Pelosi and Chi-An Emhoff, founders of Track Attack Running" class="float-left w-80 h-auto rounded-lg mr-6 mb-4">
+      
       <p class="mb-4">Track Attack Running originated at American River College in Sacramento in 2004. It was founded by Tony Pelosi and Chi-An (Wang) Emhoff as part of Total Body Fitness before launching their own business in 2007. As collegiate track captains who went on to become competitive amateur triathletes, they adapted lessons from masters swimming to turn monotonous track workouts into fun and engaging group experiences that could be enjoyed by athletes of all levels.</p>
       
       <p>As an engineer and product manager, Tony has also launched fitness applications and devices at Garmin and Magellan, while Chi-An, who has a Ph.D. in Exercise Physiology from UC Berkeley, is a Professor of Kinesiology at Saint Mary's College of California.</p>
+      
+      <div class="clear-both"></div>
     </div>
   </div>
 </section>
